--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,28 @@
+*.idea
+__pycache__/
+*.sh
+venv*
 env/
-__pycache__
 creds*
-*.json
 test*
-.*
+
+#terraform files
+*.tfstate
+*.tfstate.backup
+.terraform.tfstate.lock.info
+.DS_Store
+.vscode
+.terraform.lock.hcl
+terraform.tfvars
+secrets.hcl
+secret.tfvars
+
+# Module directory
+.terraform/
+.terragrunt-cache/
+
+tags
+*~
+*.sw[op]
+.vscode
+.idea
