--- a/providers/dev/buildspec.yml
+++ b/providers/dev/buildspec.yml
@@ -23,13 +23,14 @@ phases:
     commands:
       - env
       - cd "${CODEBUILD_SRC_DIR}/bot"
-      - export APP_TOKEN=$(aws ssm get-parameter --name "BOT_TOKEN" --output text| awk '{print $7}')
-      - export APP_WEATHER_KEY=$(aws ssm get-parameter --name "API_KEY" --output text| awk '{print $7}')
+      - export BOT_TOKEN=$(aws ssm get-parameter --name "BOT_TOKEN" --output text| awk '{print $7}')
+      - export API_KEY=$(aws ssm get-parameter --name "API_KEY" --output text| awk '{print $7}')
       - export TAG="${CODEBUILD_BUILD_NUMBER}-${ENV}"
       - make build
 
   post_build:
     commands:
+      - env
       - cd "${CODEBUILD_SRC_DIR}/providers/dev/cluster"
       - terragrunt plan -var="image_tag=${TAG}" 
       - terragrunt apply -var="image_tag=${TAG}" -auto-approve
