--- a/bot/Makefile
+++ b/bot/Makefile
@@ -1,5 +1,5 @@
 TAG ?= latest
-REGISTRY_ID ?= 367668710117
+REGISTRY_ID ?= 264716044050
 REPOSITORY_REGION ?= eu-central-1
 APP_NAME ?= bot
 ENV_NAME ?= dev
@@ -13,6 +13,7 @@ REPO_NAME = $(REGISTRY_ID).dkr.ecr.$(REPOSITORY_REGION).amazonaws.com/${APP_NAME
 build:
 	#echo "BOT_TOKEN - $(BOT_TOKEN)"
 	#echo "API_KEY - $(API_KEY)"
+	#echo "REGISTRY_ID - $(REGISTRY_ID)"
 	aws ecr get-login-password --region $(REPOSITORY_REGION) | docker login --username AWS --password-stdin $(REGISTRY_ID).dkr.ecr.$(REPOSITORY_REGION).amazonaws.com
 	
 	docker build --build-arg token=$(BOT_TOKEN) --build-arg api_key=$(API_KEY) -t $(REPO_NAME):$(TAG) -f ./Dockerfile .
